Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12955

In Build Settings page, Invoking add->build more than once skips name prompt

XMLWordPrintable

      Steps to reproduce:
      1. Create a new project
      2. In build settings page, add a new build configuration. It prompts for configuration name.
      3. Try to add a new build configuration again. It skips the name prompt.

      Here is the relevant code:
      https://qt.gitorious.org/qt-creator/qt-creator/source/378d6682873281d9f318907687da66905a6efc72:src/plugins/projectexplorer/buildsettingspropertiespage.cpp#L237

      The attached patch fixes the problem by restoring the original displayName of the BuildInfo object after use. From what I gathered, the BuildInfo is property of the build configuration factory, and it should not be mutated in this context, but I can't say for sure.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            sneakysnake Mika Attila
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes